<resources>
    <string name="app_name">Android News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--  Authentication  -->
    <string name="sign_up">Sign up</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email id</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="desc_forgot_reset_mail">A password reset link will be sent to your email id</string>
    <string name="send_email">Send email</string>
    <string name="or">OR</string>
    <string name="sign_up_using">Sign up using</string>
    <string name="did_not_have_account">Don\'t have account?</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="login_using">Login using</string>
    <string name="have_account_">already have account?</string>
    <string-array name="languages">
        <item>English</item>
        <item>हिंदी</item>
        <item>ಕನ್ನಡ</item>
        <item>తెలుగు</item>
        <item>தமிழ்</item>
        <item>മലയാളം</item>
        <item>मराठी</item>
        <item>বাংলা</item>
        <item>ગુજરાતી</item>
        <item>ਪੰਜਾਬੀ</item>
        <item>اردو</item>
    </string-array>

    <!--  Navigation  -->
    <string name="newspapers">Newspapers</string>
    <string name="news_the_hindu">Newspapers</string>
    <string name="news_deccan_chronicles">Deccan Chronicle</string>
    <string name="news_hindustan_times">Hindustan Times</string>
    <string name="news_eenaadu">Eenaadu</string>
    <string name="news_indian_express">The Indian Express</string>
    <string name="personalizations">Personalizations</string>
    <string name="my_city">My City</string>
    <string name="home_screen_setup">Home screen setup</string>
    <string name="language_preference">Language preferance</string>
    <string name="others">Others</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="sign_out">Sign out</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="article">Article</string>
    <string name="articles">Articles</string>
    <string name="live">Live</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_auth">AuthActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment">Login Fragment</string>
    <string name="forgot_password_fragment">Forgot Password Fragment</string>
    <string name="signup_fragment">SingUp Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_invalid">Name Cannot be empty</string>
    <string name="invalid_credentials">invalid credentials</string>
    <string name="welcome">Welcome</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>