<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:title="@string/newspapers">
            <menu>
                <group
                    android:id="@+id/menu_top"
                    android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_home"
                        android:title="@string/menu_home" />
                    <item
                        android:id="@+id/nav_gallery"
                        android:title="@string/menu_gallery" />
                    <item
                        android:id="@+id/nav_slideshow"
                        android:title="@string/menu_slideshow" />
                </group>
            </menu>
        </item>

        <item android:title="@string/personalizations">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/action_my_city"
                        android:icon="@drawable/my_city"
                        android:title="@string/menu_home" />
                    <item
                        android:id="@+id/action_home_setup"
                        android:icon="@drawable/vuesax_bold_element_3"
                        android:title="@string/menu_gallery" />
                    <item
                        android:id="@+id/action_language_preference"
                        android:icon="@drawable/language"
                        android:title="@string/language_preference" />
                </group>
            </menu>
        </item>

        <item android:title="@string/others">
            <menu>
                <group>
                    <item
                        android:id="@+id/action_privacy_policy"
                        android:icon="@drawable/privacy_policy"
                        android:title="@string/privacy_policy" />
                    <item
                        android:id="@+id/action_terms_and_conditions"
                        android:icon="@drawable/terms_and_conditions"
                        android:title="@string/terms_and_conditions" />
                </group>
            </menu>
        </item>

        <item
            android:id="@+id/action_sign_out"
            android:icon="@drawable/ic_awesome_sign_out_alt"
            android:title="@string/sign_out" />

    </group>
</menu>