<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SignUpFragment">

    <fragment
        android:id="@+id/SignUpFragment"
        android:name="com.nageshempire.androidnews.auth.SingUpFragment"
        android:label="@string/signup_fragment"
        tools:layout="@layout/fragment_sing_up">
        <action
            android:id="@+id/action_SignUpFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
        <action
            android:id="@+id/action_SignUpFragment_to_ForgotPasswordFragment"
            app:destination="@id/ForgotPasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.nageshempire.androidnews.auth.LoginFragment"
        android:label="@string/login_fragment"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_ForgotPasswordFragment"
            app:destination="@id/ForgotPasswordFragment" />
    </fragment>
    <fragment
        android:id="@+id/ForgotPasswordFragment"
        android:name="com.nageshempire.androidnews.auth.ForgotPasswordFragment"
        android:label="@string/forgot_password_fragment"
        tools:layout="@layout/fragment_forgot_password">
    </fragment>
</navigation>